--- a/stack.yaml
+++ b/stack.yaml
@@ -2,6 +2,6 @@ packages:
 - .
 - location: ../console-style
   extra-dep: true
-- location: ../../../../wl-pprint-annotated
+- location: ../wl-pprint-annotated
   extra-dep: true
 resolver: nightly-2016-11-25
