--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name: wl-pprint-console
-version: 0.0.1.0
+version: 0.0.1.1
 description: Wadler/Leijen style pretty printer with support for annotations and colorful console output. Additional useful display routines are provided, e.g, for HTML output.
 synopsis: Wadler/Leijen style pretty printer supporting colorful console output.
 category: Text
@@ -19,8 +19,8 @@ ghc-options:
 
 dependencies:
 - base                >= 4.8 && < 5
-- console-style       < 0.1
-- wl-pprint-annotated < 0.1
+- console-style       >= 0.0.1.2 && < 0.1
+- wl-pprint-annotated >= 0.0.1.2 && < 0.1
 - mtl                 >= 2.2 && < 2.4
 - text                >= 0.11 && < 1.3
 
