--- a/wl-pprint-console.cabal
+++ b/wl-pprint-console.cabal
@@ -3,7 +3,7 @@
 -- see: https://github.com/sol/hpack
 
 name:           wl-pprint-console
-version:        0.0.1.0
+version:        0.0.1.1
 synopsis:       Wadler/Leijen style pretty printer supporting colorful console output.
 description:    Wadler/Leijen style pretty printer with support for annotations and colorful console output. Additional useful display routines are provided, e.g, for HTML output.
 category:       Text
@@ -29,8 +29,8 @@ library
   ghc-options: -Wall
   build-depends:
       base                >= 4.8 && < 5
-    , console-style       < 0.1
-    , wl-pprint-annotated < 0.1
+    , console-style       >= 0.0.1.2 && < 0.1
+    , wl-pprint-annotated >= 0.0.1.2 && < 0.1
     , mtl                 >= 2.2 && < 2.4
     , text                >= 0.11 && < 1.3
   exposed-modules:
