--- a/package.yaml
+++ b/package.yaml
@@ -1,7 +1,7 @@
 name: wl-pprint-console
 version: 0.0.1.1
-description: Wadler/Leijen style pretty printer with support for annotations and colorful console output. Additional useful display routines are provided, e.g, for HTML output.
-synopsis: Wadler/Leijen style pretty printer supporting colorful console output.
+description: Wadler/Leijen pretty printer with support for annotations and colorful console output. Additional useful display routines are provided, e.g, for HTML output.
+synopsis: Wadler/Leijen pretty printer supporting colorful console output.
 category: Text
 stability: experimental
 author: Daniel Mendler <mail@daniel-mendler.de>
