--- a/wl-pprint-console.cabal
+++ b/wl-pprint-console.cabal
@@ -4,8 +4,8 @@
 
 name:           wl-pprint-console
 version:        0.0.1.1
-synopsis:       Wadler/Leijen style pretty printer supporting colorful console output.
-description:    Wadler/Leijen style pretty printer with support for annotations and colorful console output. Additional useful display routines are provided, e.g, for HTML output.
+synopsis:       Wadler/Leijen pretty printer supporting colorful console output.
+description:    Wadler/Leijen pretty printer with support for annotations and colorful console output. Additional useful display routines are provided, e.g, for HTML output.
 category:       Text
 stability:      experimental
 homepage:       https://github.com/minad/wl-pprint-console#readme
@@ -29,7 +29,7 @@ library
   ghc-options: -Wall
   build-depends:
       base                >= 4.8 && < 5
-    , console-style       >= 0.0.1.1 && < 0.1
+    , console-style       >= 0.0.1.2 && < 0.1
     , wl-pprint-annotated >= 0.0.1.2 && < 0.1
     , mtl                 >= 2.2 && < 2.4
     , text                >= 0.11 && < 1.3
