--- a/package.yaml
+++ b/package.yaml
@@ -23,6 +23,7 @@ dependencies:
 - wl-pprint-annotated >= 0.0.1.2 && < 0.0.2
 - mtl                 >= 2.2 && < 2.4
 - text                >= 0.11 && < 1.3
+- bytestring          >= 0.10.2 && < 0.11
 
 library:
   source-dirs: src
