--- a/wl-pprint-console.cabal
+++ b/wl-pprint-console.cabal
@@ -33,6 +33,7 @@ library
     , wl-pprint-annotated >= 0.0.1.2 && < 0.0.2
     , mtl                 >= 2.2 && < 2.4
     , text                >= 0.11 && < 1.3
+    , bytestring          >= 0.10.2 && < 0.11
   exposed-modules:
       Text.PrettyPrint.Console.WL
   default-language: Haskell2010
