use Text instead of String

--- a/wl-pprint-console.cabal
+++ b/wl-pprint-console.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   hs-source-dirs:
       src
+  default-extensions: OverloadedStrings
   ghc-options: -Wall
   build-depends:
       base                >= 4.8 && < 5
