--- a/package.yaml
+++ b/package.yaml
@@ -19,9 +19,8 @@ ghc-options:
 
 dependencies:
 - base                >= 4.8 && < 5
-- console-style       >= 0.0.2 && < 0.0.3
+- colorful-monoids    >= 0.1 && < 0.2
 - wl-pprint-annotated >= 0.0.1.2 && < 0.0.2
-- mtl                 >= 2.2 && < 2.4
 - text                >= 0.11 && < 1.3
 - bytestring          >= 0.10.2 && < 0.11
 
